# Heteroflow

./: CMakeLists.txt  LICENSE  README.md  a.cpp
example/: saxpy.cu  simple.cu
examples/: matrix-multiplication.cu  saxpy.cu
heteroflow/: heteroflow.hpp
heteroflow/core/: executor.hpp  flow_builder.hpp  graph.hpp  heteroflow.hpp  task.hpp  topology.hpp
heteroflow/cuda/: cuda.hpp
heteroflow/facility/: byte.hpp  error.hpp  facility.hpp  macro.hpp  notifier.hpp  span.hpp  spmc_queue.hpp  traits.hpp  utility.hpp  variant.hpp
heteroflow/task/: task.hpp
images/: HeteroCraft-Logo_20190907.pptx
legacy/20190828/: task.hpp
unittest/: heteroflow.cu
unittests/: basics.cu  matrix-ops.cu
